[package]
name = "fable-raytracer"
version = "0.1.0"
edition = "2021"

[lib]
name = "fable_raytracer"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
fable_library_rust = { path = "./fable_modules/fable-library-rust" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-lto]
inherits = "release"
lto = true
